diesel_derives/src/tests/snapshots/diesel_derives__tests__query_id_bounded_lifetimes.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(QueryId)]\nstruct Query<'a: 'b, 'b> {\n    f: &'a str,\n    g: &'b str,\n}\n"
---
const _: () = {
    use ::diesel;
    #[allow(non_camel_case_types)]
    impl<'a: 'b, 'b> diesel::query_builder::QueryId for Query<'a, 'b> {
        type QueryId = Query<'static, 'static>;
        const HAS_STATIC_QUERY_ID: bool = true;
        const IS_WINDOW_FUNCTION: bool = false;
    }
};
