diesel_derives/src/tests/snapshots/diesel_derives__tests__query_id_lifetime.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(QueryId)]\nstruct Query<'a> {\n    f: &'a str,\n}\n"
---
const _: () = {
    use ::diesel;
    #[allow(non_camel_case_types)]
    impl<'a> diesel::query_builder::QueryId for Query<'a> {
        type QueryId = Query<'static>;
        const HAS_STATIC_QUERY_ID: bool = true;
        const IS_WINDOW_FUNCTION: bool = false;
    }
};
