diesel_derives/src/tests/snapshots/diesel_derives__tests__queryable_by_name_deserialize_as_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(QueryableByName)]\nstruct User {\n    id: i32,\n    #[diesel(deserialize_as = String)]\n    name: MyString,\n}\n"
---
const _: () = {
    use diesel;
    impl<__DB: diesel::backend::Backend> diesel::deserialize::QueryableByName<__DB>
    for User
    where
        i32: diesel::deserialize::FromSql<diesel::dsl::SqlTypeOf<users::r#id>, __DB>,
        String: diesel::deserialize::FromSql<
            diesel::dsl::SqlTypeOf<users::r#name>,
            __DB,
        >,
    {
        fn build<'__a>(
            row: &impl diesel::row::NamedRow<'__a, __DB>,
        ) -> diesel::deserialize::Result<Self> {
            let mut id = {
                let field = diesel::row::NamedRow::get::<
                    diesel::dsl::SqlTypeOf<users::r#id>,
                    i32,
                >(row, "id")?;
                <i32 as std::convert::Into<i32>>::into(field)
            };
            let mut name = {
                let field = diesel::row::NamedRow::get::<
                    diesel::dsl::SqlTypeOf<users::r#name>,
                    String,
                >(row, "name")?;
                <String as std::convert::Into<MyString>>::into(field)
            };
            diesel::deserialize::Result::Ok(Self { id: id, name: name })
        }
    }
};
